// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.v1alpha;

import "wfa/virtual_people/common/label.proto";
import "wfa/measurement/securecomputation/v1alpha/impression.proto";

option java_package = "org.wfanet.measurement.securecomputation.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "LabeledImpressionProto";

message LabeledImpression {
  Impression impression = 1;
  repeated .wfa_virtual_people.VirtualPersonActivity people = 2;
}
